Create a Maven module for the Java module
Move the Java module into a subdirectory with its name so that it
can be compiled by name with a module source path instead of by the
list of its root Java source files. Create a Maven module for the
Java module and a parent POM for the project.

Build the Snap package using the candidate OpenJDK and OpenJFX Snap
packages. Add a "delete" part that removes the regular files and
symbolic links that are already available in the base core20 Snap.

Change the layout 'bind' declarations to 'symlink' for a faster
startup time of the Snap package.